# hrse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.lambda  Makefile  README.md  demo.py  docker-compose.yml  mock_server.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  requirements.md  roadmap.md
infra/: main.tf  outputs.tf  response.json  schedule.tf  state.tf  telegram.tf  terraform.tfvars.example  variables.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
scripts/: build_lambda.sh
src/hrse/: __init__.py  config.py
src/hrse/clients/: __init__.py  octopus.py  weather.py
src/hrse/handlers/: __init__.py  schedule_handler.py  telegram_handler.py
src/hrse/models/: events.py  pricing.py  recommendation.py  schedule.py  task_config.py  telegram.py  weather.py
src/hrse/services/: __init__.py  decision_engine.py  notification.py  weekly_state.py
src/hrse/store/: __init__.py  protocol.py  s3_store.py
src/hrse/telegram/: __init__.py  client.py  commands.py  router.py  token_provider.py
src/hrse/utils/: datetime_utils.py
tests/: conftest.py
tests/integration/: test_placeholder.py
tests/unit/: test_config.py  test_datetime_utils.py  test_decision_engine.py  test_decision_models.py  test_event_store.py  test_models.py  test_notification.py  test_schedule_handler.py  test_weekly_state_service.py
tests/unit/clients/: test_octopus_client.py  test_weather_client.py
tests/unit/telegram/: __init__.py  test_client.py  test_commands.py  test_router.py  test_telegram_handler.py  test_telegram_models.py  test_token_provider.py
