[project]
name = "hrse"
version = "0.1.0"
description = "Household Resource Scheduling Engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "HRSE Team" }]

dependencies = [
    "boto3==1.34.144",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "aws-lambda-powertools==2.43.0",
    "aws-xray-sdk>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "moto[all]==5.0.12",
    "mypy==1.10.1",
    "ruff==0.5.4",
    "pre-commit>=3.8.0",
    "boto3-stubs[lambda,s3,dynamodb,events,secretsmanager]==1.34.144",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hrse"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["hrse"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
show_error_codes = true
files = ["src/hrse"]

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "moto.*", "aws_lambda_powertools.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=hrse",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that interact with AWS (uses moto)",
    "slow: tests that take more than 1 second",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
